change timeout in client